modified index page

--- a/index.html
+++ b/index.html
@@ -1,9 +1,32 @@
+<!DOCTYPE html>
+
 <html>
-  <head>
-    <title>My blog</title>
-  <body>
-    <h1>Kia ora Taiao! (Hello World!)</h1> 
-    <p> This is the beginning of my website home page.</p>
-    <p> It will eventually contain a list of links to all my blogs. </p>
-  </body>
+  
+<head>
+  <link href="C:\Users\peter\OneDrive\Pictures\Images\logo.png" rel="shortcut icon" type="image/png">
+    <title> Sprint 2 Workshop </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta charset="UTF-8">
+    <link href="styles/main.css" rel="stylesheet" type="text/css">   
+</head>
+
+<body>
+ 
+  <h1>My Web Devolpment Journey </h1>
+  
+  <nav> 
+    <ul> 
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="html-css.html">Blog</a></li>
+      <li><a href="contact.html">More</a></li>
+    </ul>
+  </nav>
+  
+  <img src="C:\Users\peter\OneDrive\Pictures\Images\Coding\coding.jpg" alt="Coding Image">
+
+  
+</body>
+
+
 </html>
