--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </ul>
   </nav>
   
-  <img src="C:\Users\peter\OneDrive\Pictures\Images\Coding\coding.jpg" alt="Coding Image">
+  <img src="./public/coding.jpg" alt="Coding Image">
 
   
 </body>
