--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
 
   <h2> Kia Ora and welcome! </h2>
 
-  <img class="img" src="C:\Users\peter\OneDrive\Pictures\Images\myself\IMG-2518.jpg" alt="Handsome man" style="float: left;">
+  <img class="img" src="./public/IMG-2518.jpg" alt="Handsome man" style="float: left;">
 
   <p> My name is Peter Pakoti and here's a little bit about myself! </p>
   
