--- a/html-css.html
+++ b/html-css.html
@@ -44,13 +44,13 @@ To simplify this, it really is up to you! However if you want to improve your ef
 
 <div class="ptag-a">
   <div class="ptag-b">
-    <img src="C:\Users\peter\OneDrive\Pictures\Screenshots\Screenshot (6).png" style="width: 100%;">
+    <img src="./public/Screenshot (6).png" style="width: 100%;">
   </div>
   <div class="ptag-b">
-    <img src="C:\Users\peter\OneDrive\Pictures\Screenshots\Screenshot (7).png" style="width: 100%;">
+    <img src="./public/Screenshot (7).png" style="width: 100%;">
   </div>
   <div class="ptag-b">
-    <img src="C:\Users\peter\OneDrive\Pictures\Screenshots\Screenshot (9).png" style="width: 100%;">
+    <img src="./public/Screenshot (9).png" style="width: 100%;">
   </div>
 </div>
   
