--- a/html-css.html
+++ b/html-css.html
@@ -20,7 +20,9 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
       <li><a href="html-css.html">Blog</a></li>
-      <li><a href="contact.html">More</a></li> 
+      <li><a href="contact.html">More</a></li>
+      <li><a href="learning-plan.html">Plan</a></li>
+      <li><a href="identity-values.html">Values</a></li>
     </ul>
   </nav>
 
