--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
       <li><a href="about.html">About</a></li>
       <li><a href="html-css.html">Blog</a></li>
       <li><a href="contact.html">More</a></li>
+      <li><a href="learning-plan.html">Plan</a></li>
+      <li><a href="identity-values.html">Values</a></li>
     </ul>
   </nav>
   
