added values and learning plan

--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
     </ul>
   </nav>
 
-  <h2> Kia Ora and welcome! </h2>
+  <h2 id="kiacome"> Kia Ora and welcome! </h2>
 
   <img class="img" src="./public/IMG-2518.jpg" alt="Handsome man" style="float: left;">
 
