--- a/identity-values.html
+++ b/identity-values.html
@@ -22,6 +22,55 @@
         </ul>
       </nav>
       
+      <h2 id="question-values">Explain a situation where you have had an ethical decision to make. Discuss how you weighed up the values involved in that decision, the decision you made, and the consequences of your action.</h2>
+
+        <p class="values">A situation where I had an ethical decision to make was actually made not too long ago. This is when I decided to leave my full time job to study. It's not that it was the worst job I've ever had 
+          because I've had some pretty shitty jobs but I know I just wasn't happy anymore and felt like I had more to offer to this world. I was loyal to the company and made all these big plans to 
+          help improve the production of the company and that I would stay there for years and years. It wasn't until a few months ago I remember walking out to smoko and just looking around at all
+          the older guys I was working with, and you could see that they didn't want to be there but they had to be that's fine for them but that's when it hit me "Shit, is this really what I want?" 
+          "Is this really the best I can do?" and the answer was no! At the time all I knew is that I needed to get out of there, I didn't know what I was gonna do or how I was gonna do it with 
+          my young family but I knew it's what I had to do. A month or two down the road and my older brother was talking to me about DEV academy and at that point I was sold and knew that this 
+          was something I was interested in doing and would look forward to doing everyday. So it was either work a job that I wasn't happy with but I was comfortable with in terms of my income, 
+          living situation and the job itself, or follow my heart and study with very little income, very uncomfortable meaning, this is all very new to me but I was out of that job and happy!
+          So that was exactly what I did, I applied for DEV academy and once I got accepted I handed my notice in. This decision challenged me because providing for my family is a big thing for me but
+          knowing I'd leave and our family would only be livng off one income would be difficult in the short term but much more rewarding in the long run, not only for the skills I will learn along the
+          way but also for personal growth.</p>
+
+      <h2 id="question-values">Describe how your culture has influenced your values and identity.</h2>
+
+<p class="values">Coming from a Cook Island, Maori background I think a core value that both cultures share is respect and another value I'd probably add to that is selflessness. Coming from a Cook Island,
+  Maori culture both generally have big families, and in those families you make do with what you have, which is where I think the selflessness comes from. My culture has deffinantly had a 
+  big impact on my identity some good and others I wanna work on. For example in my culture, when you're spoken to you listen. Youre always told to stay humble which I think has had 
+  a massive affect on my ability to communicate openly and walk confidently. Other values of my culture that I'm proud of and have influenced my identity is my respectfulness, my selflessness,
+  my kindness, my honesty, my loyalty and my determination but one thing I'm probably most proud of is my work ethic. From a young age in my culture you're always helping out in some kind of
+  way, whether that was washing dishes, picking up rubish at the Marae, mowing the lawns the list goes on. I've carried that with me throughout my life and it's something I can proudly say. </p>
+
+      <h2 id="question-values">Evaluate your strengths and limitations in terms of your learning and career development</h2>
+
+      <p class=values>I feel like I'm quite strong minded and determined. I know once I set my mind on a goal I can achieve it and I may fail but I'll try and try again till I reach that goal. In terms of 
+      limitations I used to get overwhelmed when I'm put in high pressure situations but a big thing for me that my older brother taught me when I was studying is to write everything I'm stressed about
+      on a piece of paper and work on the things I can control and try not to worry about the things I can't. This has been a massive game changer for me in high pressure situations and has helped
+      me a lot with stress and axiety for a better work flow and a healthier work environment. One thing I do struggle with though is my ability to put my hand up and say "Hey, I'm stuck and I
+      need help" and I think this goes back to the values from my culture. I don't think it's an ego thing at all, I think it's more of having the confidence to put your hand up and speak up and 
+      this has slowed me down in the past with learning but it's something I've deffinantly been working on and looking to improve. </p>
+
+      <h2 id="question-values">Identify which of your strengths might help you in your learning journey and how they intersect with learning obstacles.</h2>
+
+<p class="values">Pretty much what I touched on in the previous question, being that I'm strong minded and persistant. This has always been my strengths from a young age and have developed these over the
+  years to where I know now that I can do anything I put my mind to and I think this will have a massive impact on my learning journey and intersecting with leaning obstacles. </p>
+
+      <h2 id="question-values">Share an example from your experience of where you were trying to work productively with others, but there was resistance or tension. Discuss the strategies you used at that time, how effective they were, and your reflections on what other strategies you would try now and why.</h2>
+
+<p class="values"> 
+  It was a very close game and we were up by two with about 5 minutes left in the last quarter of the game. We had one team mate who was getting annoyed and aggresive towards a player
+  in the other team which had a big affect on our teams flow, once he got the ball he just wanted to go head to head with that player, wasn't talking to us, wasn't passing the ball, he
+  just played selfish. Don't get me wrong he is a great player and we did need him but not if he was playing like that. So I called a timeout and being captain of the team I told him 
+  honestly "take a break, your heads not in the game and come back when you've cooled off" and he was a bit annoyed with me at first and my team mates started to back me up just telling 
+  him to have a quick break. The game started again and we played well however we were down by 3 with about 2 minutes left in the game. Coach called our last time out and he subbed in my 
+  team mate again and I knew straight away by the look on his face he was back and ready to play. He didn't look angry, annoyed, he looked focussed. We end up having possesion on the last 
+  play of the game still down by 3, that team mate who was angry before then came down and forced us to go into over time. We end up losing in over time but we gave it our best as a team.
+  Honestly I'm happy with how I handled this situation and approached it when I did. If I hadn't spoken up and my team didn't back me up I know that he would've cost us that game but instead
+  we did speak up and that player gave us another chance to win the game. </p>
 
     </body>
 </html>
