updated values and learning plan

--- a/identity-values.html
+++ b/identity-values.html
@@ -22,7 +22,7 @@
         </ul>
       </nav>
       
-      <h2 id="question-values">Explain a situation where you have had an ethical decision to make. Discuss how you weighed up the values involved in that decision, the decision you made, and the consequences of your action.</h2>
+      <h2 id="question">Explain a situation where you have had an ethical decision to make. Discuss how you weighed up the values involved in that decision, the decision you made, and the consequences of your action.</h2>
 
         <p class="values">A situation where I had an ethical decision to make was actually made not too long ago. This is when I decided to leave my full time job to study. It's not that it was the worst job I've ever had 
           because I've had some pretty shitty jobs but I know I just wasn't happy anymore and felt like I had more to offer to this world. I was loyal to the company and made all these big plans to 
@@ -36,7 +36,7 @@
           knowing I'd leave and our family would only be livng off one income would be difficult in the short term but much more rewarding in the long run, not only for the skills I will learn along the
           way but also for personal growth.</p>
 
-      <h2 id="question-values">Describe how your culture has influenced your values and identity.</h2>
+      <h2 id="question">Describe how your culture has influenced your values and identity.</h2>
 
 <p class="values">Coming from a Cook Island, Maori background I think a core value that both cultures share is respect and another value I'd probably add to that is selflessness. Coming from a Cook Island,
   Maori culture both generally have big families, and in those families you make do with what you have, which is where I think the selflessness comes from. My culture has deffinantly had a 
@@ -45,7 +45,7 @@
   my kindness, my honesty, my loyalty and my determination but one thing I'm probably most proud of is my work ethic. From a young age in my culture you're always helping out in some kind of
   way, whether that was washing dishes, picking up rubish at the Marae, mowing the lawns the list goes on. I've carried that with me throughout my life and it's something I can proudly say. </p>
 
-      <h2 id="question-values">Evaluate your strengths and limitations in terms of your learning and career development</h2>
+      <h2 id="question">Evaluate your strengths and limitations in terms of your learning and career development</h2>
 
       <p class=values>I feel like I'm quite strong minded and determined. I know once I set my mind on a goal I can achieve it and I may fail but I'll try and try again till I reach that goal. In terms of 
       limitations I used to get overwhelmed when I'm put in high pressure situations but a big thing for me that my older brother taught me when I was studying is to write everything I'm stressed about
@@ -54,7 +54,7 @@
       need help" and I think this goes back to the values from my culture. I don't think it's an ego thing at all, I think it's more of having the confidence to put your hand up and speak up and 
       this has slowed me down in the past with learning but it's something I've deffinantly been working on and looking to improve. </p>
 
-      <h2 id="question-values">Identify which of your strengths might help you in your learning journey and how they intersect with learning obstacles.</h2>
+      <h2 id="question">Identify which of your strengths might help you in your learning journey and how they intersect with learning obstacles.</h2>
 
 <p class="values">Pretty much what I touched on in the previous question, being that I'm strong minded and persistant. This has always been my strengths from a young age and have developed these over the
   years to where I know now that I can do anything I put my mind to and I think this will have a massive impact on my learning journey and intersecting with leaning obstacles. </p>
