modified last question in values

--- a/identity-values.html
+++ b/identity-values.html
@@ -59,18 +59,19 @@
 <p class="values">Pretty much what I touched on in the previous question, being that I'm strong minded and persistant. This has always been my strengths from a young age and have developed these over the
   years to where I know now that I can do anything I put my mind to and I think this will have a massive impact on my learning journey and intersecting with leaning obstacles. </p>
 
-      <h2 id="question-values">Share an example from your experience of where you were trying to work productively with others, but there was resistance or tension. Discuss the strategies you used at that time, how effective they were, and your reflections on what other strategies you would try now and why.</h2>
+      <h2 id="question">Share an example from your experience of where you were trying to work productively with others, but there was resistance or tension. Discuss the strategies you used at that time, how effective they were, and your reflections on what other strategies you would try now and why.</h2>
 
 <p class="values"> 
-  It was a very close game and we were up by two with about 5 minutes left in the last quarter of the game. We had one team mate who was getting annoyed and aggresive towards a player
-  in the other team which had a big affect on our teams flow, once he got the ball he just wanted to go head to head with that player, wasn't talking to us, wasn't passing the ball, he
-  just played selfish. Don't get me wrong he is a great player and we did need him but not if he was playing like that. So I called a timeout and being captain of the team I told him 
-  honestly "take a break, your heads not in the game and come back when you've cooled off" and he was a bit annoyed with me at first and my team mates started to back me up just telling 
-  him to have a quick break. The game started again and we played well however we were down by 3 with about 2 minutes left in the game. Coach called our last time out and he subbed in my 
-  team mate again and I knew straight away by the look on his face he was back and ready to play. He didn't look angry, annoyed, he looked focussed. We end up having possesion on the last 
-  play of the game still down by 3, that team mate who was angry before then came down and forced us to go into over time. We end up losing in over time but we gave it our best as a team.
-  Honestly I'm happy with how I handled this situation and approached it when I did. If I hadn't spoken up and my team didn't back me up I know that he would've cost us that game but instead
-  we did speak up and that player gave us another chance to win the game. </p>
+  There was this one basketball game I was in during high school and this was a very important game where the winning team would then move on to go to the New Zealand nationals tournament. 
+It was a very close game and we were up by two with about 5 minutes left in the last quarter of the game. We had one team mate who was getting annoyed and aggresive towards a player
+in the other team which had a big affect on our teams flow, once he got the ball he just wanted to go head to head with that player, wasn't talking to us, wasn't passing the ball, he
+just played selfish. Don't get me wrong he is a great player and we did need him but not if he was playing like that. So I called a timeout and being captain of the team I told him 
+honestly "take a break, your heads not in the game and come back when you've cooled off" and he was a bit annoyed with me at first and my team mates started to back me up just telling 
+him to have a quick break. The game started again and we played well however we were down by 3 with about 2 minutes left in the game. Coach called our last time out and he subbed in my 
+team mate again and I knew straight away by the look on his face he was back and ready to play. He didn't look angry, annoyed, he looked focussed. We end up having possesion on the last 
+play of the game still down by 3, that team mate who was angry before then came down and forced us to go into over time. We end up losing in over time but we gave it our best as a team.
+Honestly I'm happy with how I handled this situation and approached it when I did. If I hadn't spoken up and my team didn't back me up I know that he would've cost us that game but instead
+we did speak up and that player gave us another chance to win the game.  </p>
 
     </body>
 </html>
