--- a/main/about.html
+++ b/main/about.html
@@ -4,7 +4,7 @@
   
 <head>
   <link href="/Images/logo.png" rel="shortcut icon" type="image/png">
-    <title> Sprint 2 Workshop </title>
+    <title> Peter's Blog </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta charset="UTF-8">
     <link href="../styles/main.css" rel="stylesheet" type="text/css">
