--- a/main/more.html
+++ b/main/more.html
@@ -18,7 +18,7 @@
   
   <nav> 
     <ul> 
-      <li><a href="../main/index.html">Home</a></li>
+      <li><a href="../index.html">Home</a></li>
       <li><a href="../main/about.html">About</a></li>
       <li><a href="../blog/blog.html">Blog</a></li>
       <li><a href="../main/more.html">More</a></li>
@@ -30,6 +30,10 @@
     curriculum.</h3>
 
  </body>
+
+ <footer class="footer">
+  ...
+  </footer>
  
 </html>
   
