added footer to index

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 
       <img class="coding-img" src="./Images/coding-img.jpg" alt="Handsome man" width="100%">
 
+      <footer class="footer">
+        ...
+        </footer>
 </body>
 
 </html>
